--- a/package.json
+++ b/package.json
@@ -28,15 +28,14 @@
     "async": "^0.9.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-nodemon": "^0.4.0",
-    "grunt-preprocess": "^4.1.0",
-    "grunt-simple-mocha": "^0.4.0",
-    "nodemon": "^1.2.1"
+    "grunt": "~0.4.5",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-jshint": "~0.11.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-nodemon": "~0.4.0",
+    "grunt-preprocess": "~4.1.0",
+    "grunt-simple-mocha": "~0.4.0"
   },
   "engines": {
     "node": ">=0.10.0"
