--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "tasks"
   ],
   "dependencies": {
-    "async": "^0.9.0",
-    "duration": "^0.2.0"
+    "async": "^0.9.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
